<resources>
    <string-array name="importance_array">
        <item>Low importance</item>
        <item>Middle importance</item>
        <item>High importance</item>
    </string-array>
    <string name="appName">Notes App</string>
    <string name="menu_add_note">Add Note</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="importance">Importance</string>
    <string name="select_date">Select Date</string>
    <string name="date_not_selected">Date not selected</string>
    <string name="select_time">Select Time</string>
    <string name="time_not_selected">Time not selected</string>
    <string name="save">Save</string>
    <string name="importance_low">Low Importance</string>
    <string name="importance_medium">Middle Importance</string>
    <string name="importance_high">High Importance</string>
    <string name="filter_title">Filter by Importance</string>
    <string name="NoteTitle">Note Title</string>
    <string name="creation_time">Creation Time</string>
    <string name="settings">settings</string>
</resources>