<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="4"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/importanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importance"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/spinnerImportance"
        android:layout_width="match_parent"
        android:entries="@array/importance_array"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_not_selected"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonSelectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_not_selected"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/imageViewNote"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:background="#000000"
        android:backgroundTint="#050202"
        style="@style/AppTheme_Dark_Medium"
        android:contentDescription="Image"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />
</LinearLayout>
